--- a/style.css
+++ b/style.css
@@ -1,55 +1,73 @@
 body {
   font-family: "Open Sans", sans-serif;
 }
+
 .container {
   display: flex;
   padding: 50px;
 }
+
 .leftMenu {
   flex: 1;
 }
+
 .search {
   padding: 10px;
   width: 200px;
   border: 1px solid gray;
 }
+
 h1 {
   font-size: 30px;
-  color: gray;
-  font-weight: 300;
+  color: teal;
+  font-weight: 500;
 }
+
 .categories {
   display: flex;
   flex-direction: column;
   gap: 12px;
   cursor: pointer;
 }
-.cats{
-    cursor: pointer;
-    font-size: 20px;
-    font-weight: 300;
-    padding: 5px;
+
+.category {
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 300;
+  padding: 5px;
+  border: 1px solid gray;
+  border-radius: 5px;
+
+  &:hover {
+    color: black;
+    background-color: rgb(239, 233, 233);
+  }
 }
+
 .mainContent {
   flex: 4;
 }
-.products{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
-.product{
-    width: 350px;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    align-items: center;
+
+.product {
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
 }
-img{
-    width: 150px;
-    height: 250px;
-    object-fit: contain;
+
+img {
+  width: 150px;
+  height: 250px;
+  object-fit: contain;
 }
-.name{
-    font-weight: 300;
+
+.name {
+  font-weight: 300;
 }
